2007-02-08  David Trowbridge  <trowbrds@gmail.com>

	* data/setup-dialog.glade:
	  - Set "activates default" on the last text entry box.  Give the
	    dialog the xchat-gnome icon.  Bug #404793.

2007-02-08  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/preferences.c:
	* src/fe-gnome/preferences.h:
	* src/fe-gnome/main-window.c:
	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/main-window.h:
	* src/fe-gnome/setup-dialog.c:
	  - Change nickname data in the xchat config file only when changed in
	    the GUI, rather than every time the app starts.  Bug #396750.

2007-02-08  David Trowbridge  <trowbrds@gmail.com>

	* plugins/autoaway/autoaway.c:
	  - Remove noisy print messages.  Bug #405847.

2007-02-05  David Trowbridge  <trowbrds@gmail.com>

	* plugins/python/CVS/Entries:
	* plugins/perl/Xchat.pm:
	* plugins/perl/perl.c:
	* plugins/perl/CVS/Entries:
	* src/common/outbound.c:
	* src/common/textenums.h:
	* src/common/dbus/dbus-plugin.c:
	* src/common/dbus/CVS/Entries:
	* src/common/util.c:
	* src/common/proto-irc.c:
	* src/common/xchatc.h:
	* src/common/cfgfiles.c:
	* src/common/util.h:
	* src/common/text.c:
	* src/common/dcc.c:
	* src/common/text.h:
	* src/common/plugin.c:
	* src/common/inbound.c:
	* src/common/fe.h:
	* src/common/server.c:
	* src/common/xchat.c:
	* src/common/CVS/Entries:
	* src/common/xchat.h:
	* src/common/textevents.h:
	* src/common/textevents.in:
	  - Sync to xchat HEAD.

2007-02-03  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/xtext.c:
	  - Fix a bug where the cursor wouldn't update when moving right from
	    hovering over the indent bar onto a link.  Bug #393621.

2007-01-29  Guillaume Desmottes  <gdesmott@gnome.org>

	* plugins/python/python.c:
	* plugins/perl/perl.c:
	* plugins/tcl/tclplugin.c:
	* po/POTFILES.in:
	  - Make description strings translatable. Bug #401383.

2007-01-28  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/plugins.c:
	  - Fix a potential double free when unloading scripts which failed to