@@ -1,3 +1,8 @@
+2007-02-09  David Trowbridge  <trowbrds@gmail.com>
+
+	* Makefile.am:
+	  - Move intltool-* to DISTCLEANFILES.  Bug #406289.
+
 2007-02-08  David Trowbridge  <trowbrds@gmail.com>
 
 	* data/setup-dialog.glade:
